# desktop

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/plans/: effervescent-floating-conway.md
docs/: API.md
scripts/: bundle-python.sh  checksums.sha256  notarize-macos.sh  requirements.txt  sign-python-macos.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/datasets/: california_housing.csv  titanic.csv
src-tauri/resources/examples/: wine_quality.csv
src-tauri/src/: commands.rs  db.rs  http_server.py  inference_server.py  lib.rs  lsp.rs  main.rs  ollama.rs  python.rs
src/components/: AlignmentGuides.tsx  BaseNode.tsx  Canvas.tsx  CanvasControls.tsx  ConfirmDialog.tsx  DataLoaderNode.tsx  DataProfilePanel.tsx  DataSplitNode.tsx  EmptyCanvasPrompt.tsx  EvaluatorNode.tsx  ExperimentDialog.tsx  ExplainSection.tsx  ExportFormatDialog.tsx  ExportProgressDialog.tsx  LazyMonacoEditor.tsx  MetricsPanel.tsx  ModelDetailsModal.tsx  ModelExporterNode.tsx  ModelTagsInput.tsx  ModelsPanel.tsx  NodePalette.tsx  OllamaSettings.tsx  OutputPanel.tsx  PlaygroundPanel.tsx  PropertiesPanel.tsx  RegisterModelDialog.tsx  RunComparisonModal.tsx  RunDetailModal.tsx  RunsPanel.tsx  ScriptNode.tsx  SearchSpaceEditor.tsx  SelectionContextMenu.tsx  (+12 more)
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vercel.json
(+104 files in other folders)
