[package]
name = "mlops-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "mlops_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
walkdir = "2"
thiserror = "1"
reqwest = { version = "0.12", features = ["json"] }
lsp-types = "0.95"

[dev-dependencies]
tempfile = "3"
